# template-oh-cpp

./: CMakeLists.txt  README.md
build_Dx64b000v2017/: README.md
build_Dx64b000v2019/: README.md
lib/: README.md
manageBuilds/: bs01_Generate.bash
src/App1/: CMakeLists.txt  main.cxx
